garde_derive_tests/tests/compile-fail/duplicate_rule.stderr
error: duplicate rule `ascii`
 --> tests/compile-fail/duplicate_rule.rs:3:20
  |
3 |     #[garde(ascii, ascii)]
  |                    ^^^^^
